# LearningVulkan-Android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/eternal/learningvulkan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Debug.hh  HelloTriangle.cc  HelloTriangle.hh  TriangleApp.cc  TriangleApp.hh  VulkanDefinition.hh  VulkanMain.cc  VulkanMain.hh  VulkanUtils.cc  VulkanUtils.hh  main.cc
app/src/main/cpp/base/: VulkanBaseApp.cc  VulkanBaseApp.hh  VulkanCommon.cc  VulkanCommon.hh
app/src/main/cpp/samples/: TriangleApp.cc  TriangleApp.hh
app/src/main/cpp/utils/: MathUtils.cc  MathUtils.hh
app/src/main/cpp/vulkan_wrapper/: vulkan_wrapper.cc  vulkan_wrapper.hh
app/src/main/java/com/eternal/learningvulkan/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: hello_triangle.frag  hello_triangle.vert  triangle.frag  triangle.vert
app/src/test/java/com/eternal/learningvulkan/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
